syntax = "proto3";

option java_package = "com.flipperdevices.core.preference.pb";
option java_multiple_files = true;

enum HardwareColor {
  WHITE = 0;
  BLACK = 1;
  TRANSPARENT = 2;
}

message PairSettings {
  bool tos_passed = 1;
  bool pair_device_pass = 2;
  string device_id = 3;
  string device_name = 4;
  HardwareColor hardware_color = 5;
}